--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Smily</title>
+        <title>Doraemon Face</title>
     </head>
     <link rel="stylesheet" href="style.css">
     <body>
